URL's of microservices moved to MicroserviceProperty

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     url: jdbc:postgresql://${DATASOURCE_HOST}:5432/movie
     username: ${DATASOURCE_USERNAME}
     password: ${DATASOURCE_PASSWORD}
+  jackson:
+    default-property-inclusion: NON_NULL
 
   jpa:
     hibernate:
@@ -21,3 +23,6 @@ eureka:
   client:
     service-url:
       default-zone: ${EUREKA_HOST}
+
+microservice:
+  review-url: ${REVIEW_URL}
