--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<io.netty.version>4.1.89.Final</io.netty.version>
 		<org.springframework.kafka.version>3.0.2</org.springframework.kafka.version>
 		<io.projectreactor.kafka.version>1.3.16</io.projectreactor.kafka.version>
+		<com.jcabi.version>0.27.2</com.jcabi.version>
 	</properties>
 
 	<dependencies>
@@ -119,6 +120,12 @@
 			<groupId>io.projectreactor.kafka</groupId>
 			<artifactId>reactor-kafka</artifactId>
 			<version>${io.projectreactor.kafka.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jcabi</groupId>
+			<artifactId>jcabi-xml</artifactId>
+			<version>${com.jcabi.version}</version>
 		</dependency>
 	</dependencies>
 
