--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
 		<jakarta-persistence.version>3.1.0</jakarta-persistence.version>
 		<javax.validation.version>2.0.1.Final</javax.validation.version>
 		<org.springframework.cloud.version>4.0.0</org.springframework.cloud.version>
-		<com.playtika.reactivefeign.version>3.2.6</com.playtika.reactivefeign.version>
 		<org.springframework.kafka.version>3.0.2</org.springframework.kafka.version>
 		<io.projectreactor.kafka.version>1.3.16</io.projectreactor.kafka.version>
 		<com.jcabi.version>0.27.2</com.jcabi.version>
@@ -90,17 +89,10 @@
 			<version>${javax.validation.version}</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-<!--			<version>${org.springframework.cloud.version}</version>-->
-<!--		</dependency>-->
-
 		<dependency>
-			<groupId>com.playtika.reactivefeign</groupId>
-			<artifactId>feign-reactor-spring-cloud-starter</artifactId>
-			<version>${com.playtika.reactivefeign.version}</version>
-			<type>pom</type>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>${org.springframework.cloud.version}</version>
 		</dependency>
 
 		<dependency>
@@ -119,6 +111,12 @@
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-xml</artifactId>
 			<version>${com.jcabi.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>${org.springframework.cloud.version}</version>
 		</dependency>
 	</dependencies>
 
