--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8081
 
 spring:
+  config:
+    import: optional:file:.env[.properties]
   application:
     name: movie
   jackson:
@@ -14,10 +16,10 @@ spring:
     init:
       mode: always
 
-#eureka:
-#  client:
-#    service-url:
-#      default-zone: http://${EUREKA_HOST}:8761/eureka
+eureka:
+  client:
+    service-url:
+      default-zone: http://${EUREKA_HOST}:8761/eureka
 
 services:
   review-url: ${REVIEW_URL}
