--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
 		<jakarta-persistence.version>3.1.0</jakarta-persistence.version>
 		<javax.validation.version>2.0.1.Final</javax.validation.version>
-		<org.springframework.cloud.version>4.0.0</org.springframework.cloud.version>
+		<org.springframework.cloud.version>4.0.2</org.springframework.cloud.version>
 		<org.springframework.kafka.version>3.0.2</org.springframework.kafka.version>
 		<io.projectreactor.kafka.version>1.3.16</io.projectreactor.kafka.version>
 		<com.jcabi.version>0.27.2</com.jcabi.version>
@@ -44,6 +44,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-loadbalancer</artifactId>
+			<version>${org.springframework.cloud.version}</version>
 		</dependency>
 
 		<dependency>
