Configs are updated

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jackson:
     default-property-inclusion: NON_NULL
   r2dbc:
-    url: r2dbc:postgresql://${DATASOURCE_HOST}:5432/movie
+    url: r2dbc:postgresql://${DATASOURCE_HOST}:5432/postgres
     username: ${DATASOURCE_USERNAME}
     password: ${DATASOURCE_PASSWORD}
   sql:
