--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 
 	<groupId>com.solvd</groupId>
-	<artifactId>movie</artifactId>
+	<artifactId>pgMovie</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>movie</name>
+	<name>pgMovie</name>
 	<description>Movie microservice</description>
 
 	<properties>
@@ -25,6 +25,7 @@
 		<jakarta-persistence.version>3.1.0</jakarta-persistence.version>
 		<javax.validation.version>2.0.1.Final</javax.validation.version>
 		<org.springframework.cloud.version>4.0.2</org.springframework.cloud.version>
+		<org.springframework.data.version>5.0.5</org.springframework.data.version>
 		<org.springframework.kafka.version>3.0.2</org.springframework.kafka.version>
 		<io.projectreactor.kafka.version>1.3.16</io.projectreactor.kafka.version>
 		<com.jcabi.version>0.27.2</com.jcabi.version>
@@ -47,10 +48,27 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>co.elastic.clients</groupId>-->
+<!--			<artifactId>elasticsearch-java</artifactId>-->
+<!--			<version>8.5.3</version>-->
+<!--		</dependency>-->
+
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-loadbalancer</artifactId>
 			<version>${org.springframework.cloud.version}</version>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.data</groupId>-->
+<!--			<artifactId>spring-data-elasticsearch</artifactId>-->
+<!--			<version>${org.springframework.data.version}</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -134,7 +152,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>com.solvd.movie.MovieApplication</mainClass>
+					<mainClass>com.solvd.pgMovie.MovieApplication</mainClass>
 					<layout>JAR</layout>
 				</configuration>
 				<executions>
