--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <org.springframework.data.version>5.0.5</org.springframework.data.version>
     <org.springframework.kafka.version>3.0.2</org.springframework.kafka.version>
     <io.projectreactor.kafka.version>1.3.16</io.projectreactor.kafka.version>
+    <maven-checkstyle-plugin.version>3.2.2</maven-checkstyle-plugin.version>
     <com.jcabi.version>0.27.2</com.jcabi.version>
   </properties>
   <dependencies>
@@ -129,6 +130,24 @@
           <execution>
             <goals>
               <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${maven-checkstyle-plugin.version}</version>
+        <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+          <sourceDirectories>
+            <sourceDirectory>com.solvd.movie</sourceDirectory>
+          </sourceDirectories>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
             </goals>
           </execution>
         </executions>
