--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,7 +20,7 @@ jobs:
           restore-keys: |
             maven-
       - run: |
-          mvn clean install
+          mvn clean package
       - uses: codecov/codecov-action@v3
         with:
           files: ./target/site/jacoco/jacoco.xml
