--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -21,6 +21,7 @@ jobs:
             maven-
       - run: |
           mvn clean package
+          mvn verify
       - uses: codecov/codecov-action@v3
         with:
           files: ./target/site/jacoco/jacoco.xml
