Integration tests for elasticsearch are added

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <org.mockito.version>5.0.0</org.mockito.version>
     <org.jacoco.version>0.8.10</org.jacoco.version>
     <reactor-test.version>3.2.3.RELEASE</reactor-test.version>
+    <org.testcontainers.version>1.18.1</org.testcontainers.version>
   </properties>
   <dependencies>
     <dependency>
@@ -120,6 +121,18 @@
       <artifactId>reactor-test</artifactId>
       <scope>test</scope>
       <version>${reactor-test.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>${org.testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${org.testcontainers.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
