--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,29 +1,22 @@
-name: maven
+name: Java CI with Maven
+
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - master
+    branches: [ "master" ]
+
 jobs:
-  test:
-    name: Build
-    strategy:
-      matrix:
-        os: [ubuntu-20.04, windows-2022, macos-12]
-        java: [17]
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
+          java-version: '17'
           distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-      - uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-jdk-${{ matrix.java }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-jdk-${{ matrix.java }}-maven-
-      - run: mvn clean install --errors --batch-mode
+          cache: maven
+      - name: Build with Maven
+        run: |
+          mvn clean install
