--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <org.jacoco.version>0.8.10</org.jacoco.version>
     <reactor-test.version>3.2.3.RELEASE</reactor-test.version>
     <org.testcontainers.version>1.18.1</org.testcontainers.version>
+    <failsafe.version>3.0.0-M6</failsafe.version>
   </properties>
   <dependencies>
     <dependency>
@@ -181,6 +182,22 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${failsafe.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
