--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     depends_on:
       - elasticsearch
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
     networks:
       - movie
   logstash:
@@ -34,13 +34,35 @@ services:
       - "50000:50000/udp"
       - "9600:9600"
     volumes:
-      - ./logstash/pipeline:/usr/share/logstash/config/pipeline
-      - logstash-data:/usr/share/logstash/data
+      - ./elk/logstash/pipeline:/usr/share/logstash/config/pipeline
     command: logstash -f /usr/share/logstash/config/pipeline/logstash.conf
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
     depends_on:
       - elasticsearch
+    networks:
+      - movie
+  prometheus:
+    image: prom/prometheus:v2.44.0
+    container_name: prometheus
+    volumes:
+      - ./elk/prometheus/:/etc/prometheus/
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    ports:
+      - "9090:9090"
+    networks:
+      - movie
+  grafana:
+    image: grafana/grafana-oss:8.2.6
+    container_name: grafana
+    depends_on:
+      - prometheus
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
+      GF_SERVER_DOMAIN: ${GRAFANA_DOMAIN}
     networks:
       - movie
   zookeeper:
@@ -79,6 +101,4 @@ volumes:
   elasticsearch-data:
     driver: local
   kibana-data:
-    driver: local
-  logstash-data:
     driver: local
