--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     container_name: prometheus
     volumes:
       - ./elk/prometheus/:/etc/prometheus/
+      - prometheus-data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
@@ -54,12 +55,14 @@ services:
     networks:
       - movie
   grafana:
-    image: grafana/grafana-oss:8.2.6
+    image: grafana/grafana:9.5.2
     container_name: grafana
     depends_on:
       - prometheus
     ports:
       - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
     environment:
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
       GF_SERVER_DOMAIN: ${GRAFANA_DOMAIN}
@@ -101,4 +104,8 @@ volumes:
   elasticsearch-data:
     driver: local
   kibana-data:
+    driver: local
+  prometheus-data:
+    driver: local
+  grafana-data:
     driver: local
