--- a/elk/prometheus/prometheus.yml
+++ b/elk/prometheus/prometheus.yml
@@ -1,8 +1,6 @@
 scrape_configs:
-  - job_name: "Spring Boot Application input"
+  - job_name: "Movie app"
     metrics_path: "/actuator/prometheus"
     scrape_interval: 3s
     static_configs:
-      - targets: ["localhost:8081"]
-        labels:
-          application: "Movie Application"
+      - targets: ["host.docker.internal:8081"]
