--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,12 @@
     <io.projectreactor.kafka.version>1.3.16</io.projectreactor.kafka.version>
     <maven-checkstyle-plugin.version>3.2.2</maven-checkstyle-plugin.version>
     <com.jcabi.version>0.27.2</com.jcabi.version>
+    <eo-rs.version>0.0.1</eo-rs.version>
     <org.mockito.version>5.0.0</org.mockito.version>
     <org.jacoco.version>0.8.10</org.jacoco.version>
     <reactor-test.version>3.2.3.RELEASE</reactor-test.version>
     <org.testcontainers.version>1.18.1</org.testcontainers.version>
-    <failsafe.version>3.0.0-M6</failsafe.version>
+    <failsafe.version>3.1.0</failsafe.version>
   </properties>
   <dependencies>
     <dependency>
@@ -104,7 +105,7 @@
     <dependency>
       <groupId>io.github.eo-cqrs</groupId>
       <artifactId>eo-rs</artifactId>
-      <version>0.0.1</version>
+      <version>${eo-rs.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -206,6 +207,7 @@
         </executions>
         <configuration>
           <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+          <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
       </plugin>
       <plugin>
