--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
       <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-graphql</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-loadbalancer</artifactId>
       <version>${org.springframework.cloud.version}</version>
