--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <reactor-test.version>3.2.3.RELEASE</reactor-test.version>
     <org.testcontainers.version>1.18.1</org.testcontainers.version>
     <failsafe.version>3.1.0</failsafe.version>
+    <graphql.version>15.0.0</graphql.version>
   </properties>
   <dependencies>
     <dependency>
@@ -123,6 +124,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.graphql</groupId>
+      <artifactId>spring-graphql-test</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
